--- a/travel_recommendation.css
+++ b/travel_recommendation.css
@@ -1,42 +1,50 @@
-/* Basic CSS for the navigation bar */
+/* Default CSS for page */
+body {
+    background-image: url('pexels-josh-hild-1270765-24964094.jpg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+}
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
+
+/* Basic CSS for the navigation bar */
 nav {
     background-color: #333;
     padding: 10px;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    
-  }
+}
   
-  nav ul {
+nav ul {
     list-style-type: none;
     /* padding: 0; */
-  }
+}
   
-  nav ul li {
+nav ul li {
     display: inline;
     margin-right: 10px;
-  }
+}
   
-  nav a {
+nav a {
     font-family: Georgia, 'Times New Roman', Times, serif;
     text-decoration: none;
     color: #FFF;
-  }
+}
 
-  .navRight {
+.navRight {
     background-color: #FFF;
     -webkit-border-radius: 40px;
     -moz-border-radius: 40px;
      border-radius: 40px;
      padding: 5px 10px 5px 10px;
-  }
+}
 
-  nav input {
+nav input {
     border: none;
-  }
+}
